sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:8: error: illegal start of simple pattern
    for (var :j <- i to getNombreValeurs-1) {
         ^AlgSelectionSort:18: error: '<-' expected but '}' found.
  }
  ^